tests/snapshots/generator__advanced_create_files@_exact_bytes_100000_1_1_1.snap
---
source: tests/generator.rs
expression: "&golden"
---
Exactly 1 file will be generated in approximately 1 directory distributed across a tree of maximum depth 1 where each directory contains approximately 1 other directory. Each file will contain approximately 100,000 bytes of random data.
Created 1 file (85.6 kB) across 0 directories.

/0

0x9fdfa9896a30cb3c
