tests/snapshots/generator__advanced_create_files@_exact_bytes_100000_1_1_1000.snap
---
source: tests/generator.rs
expression: "&golden"
---
Exactly 1 file will be generated in approximately 1 directory distributed across a tree of maximum depth 1 where each directory contains approximately 1 other directory. Each file will contain approximately 100,000 bytes of random data.
Created 1 file (46.8 kB) across 0 directories.

/0

0xfa9bf408639f4061
